--- a/package.json
+++ b/package.json
@@ -2,16 +2,24 @@
   "name": "mini-vue",
   "version": "1.0.0",
   "description": "自己实现简易版vue",
-  "main": "index.js",
+  "main": "lib/mini-vue.cjs.js",
+  "module": "lib/mini-vue.esm.js",
   "author": "guolicheng",
   "license": "MIT",
+  "scripts": {
+    "test": "jest",
+    "build": "rollup -c ./rollup.config.js"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.2",
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-typescript": "^7.17.12",
+    "@rollup/plugin-typescript": "^8.3.2",
     "@types/jest": "^27.5.1",
     "babel-jest": "^28.1.0",
     "jest": "^28.1.0",
+    "rollup": "^2.75.6",
+    "tslib": "^2.4.0",
     "typescript": "^4.7.2"
   }
 }
